src/main/resources/static/css/bookorder.css
@charset "UTF-8";

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	font-family: 'Poppins', sans-serif;
}

a {
	text-decoration: none;
}

.disabledInput {
	display: none;
}

.logoutbutton {
	position: absolute;
	bottom: 0;
	left: 80px;
	background-color: #fbded2;
	padding: 15px;
	color: black;
	border: none;
	border-radius: 5px;
	margin: 25px;
	z-index: 100;
	font-weight: bold;
}

.userboard {
	display: flex;
	flex-direction: row;
	height: 93vh;
	width: 100%;
}

.linkbar {
	flex: 3;
	background-color: #272c48;
}

.linkbar>a>i {
	padding: 20px;
	color: white;
	text-decoration: none;
	font-size: 1.8rem;
	font-weight: bold;
	margin-bottom: 20px;
	width: 100%;
}

.navbar {
	height: 7vh;
	background-color: #272c48;
}

.logo {
	color: white;
	font-size: 1.3rem;
	font-weight: bold;
	margin-left: 30px;
}

#diff {
	color: #f76c28;
}

.navbar>h3 {
	color: white;
	font-size: 1.3rem;
	font-weight: bold;
	margin-right: 30px;
}

.active {
	background-color: white;
	color: black !important;
}

.menubar {
	flex: 17;
	height: 100%;
	width: 100%;
	display: flex;
	flex-direction: column;
	background-color: #272c48;
}

.menubar>a {
	padding: 20px;
	color: white;
	text-decoration: none;
	font-size: 1.2rem;
	font-weight: bold;
	margin-bottom: 20px;
	width: 100%;
}

.menubar>h3 {
	padding: 25px;
	color: white;
	background-color: #272c48;
	font-size: 1.3rem;
	font-weight: bold;
}

.maincontent {
	flex: 80;
	height: 100%;
	width: 100%;
	padding: 25px;
	overflow-y: scroll;
}

.maincontent>h2 {
	margin-top: 30px;
}

.header {
	display: flex;
	justify-content: space-between;
}

.chooseType {
	margin-top: 15px;
}

.menuInputForm {
	background-color: #ffeee7;
	padding: 30px;
}

.title>h1 {
	font-weight: bold;
	color: #f76c28;
}

.title>h3 {
	font-weight: bold;
	color: black;
}

.walletbalance>h1 {
	color: black;
	font-weight: bold;
}

.walletbalance>h2 {
	color: #f76c28;
	font-weight: bold;
}

.walletbalance {
	background-color: white;
	padding: 13px 15px;
	border-radius: 5px;
}

.button {
	width: auto;
	padding: 20px;
	background: #f76c28;
	border-radius: 15px;
	border: none;
	color: white;
	margin-bottom: 20px;
	margin-top: 20px;
	margin-left: 15px;
	font-weight: bold;
}

input[type="radio"] {
	display: none;
}

label {
	display: inline-block;
	cursor: pointer;
	position: relative;
	padding-left: 25px;
	margin-right: 15px;
	font-size: 16px;
	color: #333;
	font-weight: bold;
}

label:before {
	content: "";
	display: inline-block;
	width: 18px;
	height: 18px;
	margin-right: 10px;
	position: absolute;
	left: 0;
	bottom: 3px;
	background-color: #fff;
	border: 2px solid #ccc;
	border-radius: 50%;
}

input[type="radio"]:checked+label:before {
	content: "\2022";
	color: #fff;
	font-size: 20px;
	text-align: center;
	line-height: 18px;
	background-color: #f76c28;
	border-color: #ffeee7;
}

.currentmenu {
	margin-top: 20px;
}

.currentmenu>h2 {
	font-weight: bold;
}

.menuItems {
	margin-top: 20px;
	margin-bottom: 20px;
	display: flex;
}

.card {
	margin-right: 30px;
		transition: scale 0.5s;
}

.card:hover{
	scale:1.07;

}



.card-body > *{
	padding:5px;
}
.card-img, .card-img-bottom, .card-img-top {
	height: 200px;
}
.first {
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.circle-red{
	width:15px;
	height:15px;
	border-radius:50%;
	background-color:red;
}

.circle-green{
	width:15px;
	height:15px;
	border-radius:50%;
	background-color:green;
}



.availbelfrom {
	font-size: 0.7rem;
}

.price {
	color: #f76c28;
}

.btn{
	background-color:#272c48;
}

.btn:hover{
	color:white;
	background-color:#f76c28;
}

.styled-table {
	border-collapse: collapse;
	margin: 25px 0;
	font-size: 0.9em;
	font-family: sans-serif;
	width: 100%;
	box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
}

.styled-table thead tr {
	background-color: #272c48;
	color: #ffffff;
	text-align: left;
}

.styled-table th, .styled-table td {
	padding: 12px 15px;
}

.styled-table tbody tr {
	border-bottom: 1px solid #dddddd;
}

.styled-table tbody tr:nth-of-type(even) {
	background-color: #ffeee7;
}

.styled-table tbody tr:last-of-type {
	border-bottom: 2px solid #f76c28;
}

.card-body{
	display: flex;
	flex-direction: column;
}

.bookorderbtn {
	font-weight: bold;
	color: #f76c28;
	justify-content: flex-end;
	align-items: flex-end;
}

.cancleorderbtn {
	font-weight: bold;
	color: red;
}

